Update founders slider

--- a/index.html
+++ b/index.html
@@ -38,8 +38,8 @@
         <nav class="l-side-nav">
           <ul class="side-nav">
             <li class="is-active"><span>Home</span></li>
-            <li><span>Works</span></li>
-            <li><span>About</span></li>
+            <li><span>Collections</span></li>
+            <li><span>YUGI Token</span></li>
             <li><span>Contact</span></li>
             <li><span>Social Media</span></li>
           </ul>
@@ -70,34 +70,34 @@
           </li>
           <li class="l-section section">
             <div class="work">
-              <h2>Selected work</h2>
+              <h2>Founder's Collection</h2>
               <div class="work--lockup">
                 <ul class="slider">
                   <li class="slider--item slider--item-left">
                     <a href="#0">
-                      <div class="slider--item-image">
-                        <img src="assets/img/work-victory.jpg" alt="Victory">
+                      <div>
+                        <img src="assets/img/slider/pepe_donald.png" alt="Victory">
                       </div>
-                      <p class="slider--item-title">Victory</p>
-                      <p class="slider--item-description">Lorem ipsum dolor sit amet, consectetur adipisicing elit sed do.</p>
+                      <p class="slider--item-title">Donald Trump</p>
+                      <p class="slider--item-description">Manipulator of markets, president of USA.</p>
                     </a>
                   </li>
                   <li class="slider--item slider--item-center">
                     <a href="#0">
-                      <div class="slider--item-image">
-                        <img src="assets/img/work-metiew-smith.jpg" alt="Metiew and Smith">
+                      <div>
+                        <img src="assets/img/slider/pepe_satoshi.png" alt="Metiew and Smith">
                       </div>
-                      <p class="slider--item-title">Metiew &amp; Smith</p>
-                      <p class="slider--item-description">Lorem ipsum dolor sit amet, consectetur adipisicing elit sed do.</p>
+                      <p class="slider--item-title">Satoshi Nakomoto</p>
+                      <p class="slider--item-description">The mysterious creator of bitcoin</p>
                     </a>
                   </li>
                   <li class="slider--item slider--item-right">
                     <a href="#0">
-                      <div class="slider--item-image">
-                        <img src="assets/img/work-alex-nowak.jpg" alt="Alex Nowak">
+                      <div>
+                        <img src="assets/img/slider/pepe_vitalik.png" alt="Alex Nowak">
                       </div>
-                      <p class="slider--item-title">Alex Nowak</p>
-                      <p class="slider--item-description">Lorem ipsum dolor sit amet, consectetur adipisicing elit sed do.</p>
+                      <p class="slider--item-title">Vitalik Buterin</p>
+                      <p class="slider--item-description">A brilliant mind.</p>
                     </a>
                   </li>
                 </ul>
@@ -124,7 +124,7 @@
           <li class="l-section section">
             <div class="about">
               <div class="about--banner">
-                <h2>We<br>believe in<br>passionate<br>people</h2>
+                <h2>An NFT<br>FARMING<br>TOKEN</h2>
                 <a href="#0">Career
                   <span>
                     <svg version="1.1" id="Layer_1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px" viewBox="0 0 150 118" style="enable-background:new 0 0 150 118;" xml:space="preserve">
@@ -258,10 +258,10 @@
   </div>
   <ul class="outer-nav">
     <li class="is-active">Home</li>
-    <li>Works</li>
-    <li>About</li>
+    <li>Collections</li>
+    <li>YUGI Token</li>
     <li>Contact</li>
-    <li>Hire us</li>
+    <li>Social Media</li>
   </ul>
 </div>
 
