Add all pepe founders cards

--- a/index.html
+++ b/index.html
@@ -76,28 +76,91 @@
                   <li class="slider--item slider--item-left">
                     <a href="#0">
                       <div>
-                        <img src="assets/img/slider/pepe_donald.png" alt="Victory">
+                        <img src="assets/img/slider/pepe_craig.png" alt="Pepe Craig">
                       </div>
-                      <p class="slider--item-title">Donald Trump</p>
-                      <p class="slider--item-description">Manipulator of markets, president of USA.</p>
+                      <p class="slider--item-title">Pepe Craig</p>
+                      <p class="slider--item-description">The founder of bitcoin himeself, Satoshi Nakomoto</p>
                     </a>
                   </li>
                   <li class="slider--item slider--item-center">
                     <a href="#0">
                       <div>
-                        <img src="assets/img/slider/pepe_satoshi.png" alt="Metiew and Smith">
+                        <a href="https://app.rarible.com/token/0x05fda153b204a9211901e3f3da1befcf88c41b57:1:0x50d34fd621ee778ba6431d491c69bab77f3dd3e6" target="_blank"><img src="assets/img/slider/pepe_satoshi.png" alt="Pepe Satoshi"></a>
                       </div>
-                      <p class="slider--item-title">Satoshi Nakomoto</p>
-                      <p class="slider--item-description">The mysterious creator of bitcoin</p>
+                      <p class="slider--item-title">Pepe Satoshi</p>
+                      <p class="slider--item-description">Some say he will reveal himself when bitcoin reaches 1,000,000$</p>
                     </a>
                   </li>
                   <li class="slider--item slider--item-right">
                     <a href="#0">
                       <div>
-                        <img src="assets/img/slider/pepe_vitalik.png" alt="Alex Nowak">
+                        <img src="assets/img/slider/pepe_vitalik.png" alt="Pepe Vitalik">
                       </div>
-                      <p class="slider--item-title">Vitalik Buterin</p>
-                      <p class="slider--item-description">A brilliant mind.</p>
+                      <p class="slider--item-title">Pepe Vitalik</p>
+                      <p class="slider--item-description">Joined a gym and now ladies love him</p>
+                    </a>
+                  </li>
+                  <li class="slider--item">
+                    <a href="#0">
+                      <div>
+                        <img src="assets/img/slider/pepe_cz.png" alt="Pepe CZ">
+                      </div>
+                      <p class="slider--item-title">Pepe CZ</p>
+                      <p class="slider--item-description">Runs the biggest exchange but still farms UNI Liquidity</p>
+                    </a>
+                  </li>
+                  <li class="slider--item">
+                    <a href="#0">
+                      <div>
+                        <img src="assets/img/slider/pepe_charlie.png" alt="Pepe Charlie">
+                      </div>
+                      <p class="slider--item-title">Pepe Charlie</p>
+                      <p class="slider--item-description">The hero we deserve but not who we need</p>
+                    </a>
+                  </li>
+                  <li class="slider--item">
+                    <a href="#0">
+                      <div>
+                        <img src="assets/img/slider/pepe_donald.png" alt="Pepe Donald">
+                      </div>
+                      <p class="slider--item-title">Pepe Donald</p>
+                      <p class="slider--item-description">Got pissed off by a kid and asked Vitalik to make him a card</p>
+                    </a>
+                  </li>
+                  <li class="slider--item">
+                    <a href="#0">
+                      <div>
+                        <img src="assets/img/slider/pepe_justin.png" alt="Pepe Justin">
+                      </div>
+                      <p class="slider--item-title">Pepe Justin</p>
+                      <p class="slider--item-description">Waiting for dinner with Warren Buffet</p>
+                    </a>
+                  </li>
+                  <li class="slider--item">
+                    <a href="#0">
+                      <div>
+                        <img src="assets/img/slider/pepe_roger.png" alt="Pepe Roger">
+                      </div>
+                      <p class="slider--item-title">Pepe Roger</p>
+                      <p class="slider--item-description">Became a Yu-Gi-Oh master but gave it up for Bitcoin</p>
+                    </a>
+                  </li>
+                  <li class="slider--item">
+                    <a href="#0">
+                      <div>
+                        <img src="assets/img/slider/pepe_carlos.png" alt="Pepe Carlos">
+                      </div>
+                      <p class="slider--item-title">Pepe Carlos</p>
+                      <p class="slider--item-description">Hey hey hey, bitconnnnnnnnecctt! Master of Ponzi Schemes</p>
+                    </a>
+                  </li>
+                  <li class="slider--item">
+                    <a href="#0">
+                      <div>
+                        <img src="assets/img/slider/pepe_mcafee.png" alt="Pepe Mcafee">
+                      </div>
+                      <p class="slider--item-title">Pepe Mcafee</p>
+                      <p class="slider--item-description">Lost his penis and got liquidated on Bitmex</p>
                     </a>
                   </li>
                 </ul>
@@ -124,7 +187,7 @@
           <li class="l-section section">
             <div class="about">
               <div class="about--banner">
-                <h2>An NFT<br>FARMING<br>TOKEN</h2>
+                <h2>AN NFT<br>FARMING<br>TOKEN</h2>
                 <a href="#0">Career
                   <span>
                     <svg version="1.1" id="Layer_1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px" viewBox="0 0 150 118" style="enable-background:new 0 0 150 118;" xml:space="preserve">
