--- a/index.html
+++ b/index.html
@@ -187,8 +187,8 @@
           <li class="l-section section">
             <div class="about">
               <div class="about--banner">
-                <h2>AN NFT<br>FARMING<br>TOKEN</h2>
-                <a href="#0">Career
+                <h2>YUGI<br>TOKEN</h2>
+                <a href="#0">Etherscan
                   <span>
                     <svg version="1.1" id="Layer_1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px" viewBox="0 0 150 118" style="enable-background:new 0 0 150 118;" xml:space="preserve">
                     <g transform="translate(0.000000,118.000000) scale(0.100000,-0.100000)">
@@ -201,13 +201,13 @@
               </div>
               <div class="about--options">
                 <a href="#0">
-                  <h3>Winners</h3>
+                  <h3>Limited Supply</h3>
                 </a>
                 <a href="#0">
-                  <h3>Philosophy</h3>
+                  <h3>NFT Airdrops</h3>
                 </a>
                 <a href="#0">
-                  <h3>History</h3>
+                  <h3>SMALL PRESALE</h3>
                 </a>
               </div>
             </div>
@@ -321,10 +321,10 @@
   </div>
   <ul class="outer-nav">
     <li class="is-active">Home</li>
-    <li>Collections</li>
-    <li>YUGI Token</li>
+    <li>Cards</li>
+    <li>$YUGI</li>
     <li>Contact</li>
-    <li>Social Media</li>
+    <li>Social</li>
   </ul>
 </div>
 
