--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
             <li class="is-active"><span>Home</span></li>
             <li><span>Collections</span></li>
             <li><span>YUGI Token</span></li>
-            <li><span>Contact</span></li>
+            <li><span>About Us</span></li>
             <li><span>Social Media</span></li>
           </ul>
         </nav>
@@ -321,7 +321,7 @@
     <li class="is-active">Home</li>
     <li>Cards</li>
     <li>$YUGI</li>
-    <li>Contact</li>
+    <li>About</li>
     <li>Social</li>
   </ul>
 </div>
