--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
           <li class="l-section section section--is-active">
             <div class="intro">
               <div class="intro--banner">
-                <h1>The Rarest<br>NFTs<br>Ever!</h1>
+                <h1>Rarest<br>NFTs<br>Ever!</h1>
                 <a href="https://app.rarible.com/pepeyugi/collectibles" target="_blank">VIEW COLLECTION</a>
                 <img src="assets/img/main.png" alt="Welcome">
               </div>
@@ -74,7 +74,7 @@
               <div class="work--lockup">
                 <ul class="slider">
                   <li class="slider--item slider--item-left">
-                    <a href="#0">
+                    <a href="https://app.rarible.com/token/0x05fda153b204a9211901e3f3da1befcf88c41b57:10:0x50d34fd621ee778ba6431d491c69bab77f3dd3e6" target="_blank">
                       <div>
                         <img src="assets/img/slider/pepe_craig.png" alt="Pepe Craig">
                       </div>
@@ -83,16 +83,16 @@
                     </a>
                   </li>
                   <li class="slider--item slider--item-center">
-                    <a href="#0">
+                    <a href="https://app.rarible.com/token/0x05fda153b204a9211901e3f3da1befcf88c41b57:1:0x50d34fd621ee778ba6431d491c69bab77f3dd3e6" target="_blank">
                       <div>
-                        <a href="https://app.rarible.com/token/0x05fda153b204a9211901e3f3da1befcf88c41b57:1:0x50d34fd621ee778ba6431d491c69bab77f3dd3e6" target="_blank"><img src="assets/img/slider/pepe_satoshi.png" alt="Pepe Satoshi"></a>
+                        <img src="assets/img/slider/pepe_satoshi.png" alt="Pepe Satoshi">
                       </div>
                       <p class="slider--item-title">Pepe Satoshi</p>
                       <p class="slider--item-description">Some say he will reveal himself when bitcoin reaches 1,000,000$</p>
                     </a>
                   </li>
                   <li class="slider--item slider--item-right">
-                    <a href="#0">
+                    <a href="https://app.rarible.com/token/0x05fda153b204a9211901e3f3da1befcf88c41b57:2:0x50d34fd621ee778ba6431d491c69bab77f3dd3e6" target="_blank">
                       <div>
                         <img src="assets/img/slider/pepe_vitalik.png" alt="Pepe Vitalik">
                       </div>
@@ -101,7 +101,7 @@
                     </a>
                   </li>
                   <li class="slider--item">
-                    <a href="#0">
+                    <a href="https://app.rarible.com/token/0x05fda153b204a9211901e3f3da1befcf88c41b57:3:0x50d34fd621ee778ba6431d491c69bab77f3dd3e6" target="_blank">
                       <div>
                         <img src="assets/img/slider/pepe_chang.png" alt="Pepe CZ">
                       </div>
@@ -110,7 +110,7 @@
                     </a>
                   </li>
                   <li class="slider--item">
-                    <a href="#0">
+                    <a href="https://app.rarible.com/token/0x05fda153b204a9211901e3f3da1befcf88c41b57:4:0x50d34fd621ee778ba6431d491c69bab77f3dd3e6" target="_blank">
                       <div>
                         <img src="assets/img/slider/pepe_charlie.png" alt="Pepe Charlie">
                       </div>
@@ -119,7 +119,7 @@
                     </a>
                   </li>
                   <li class="slider--item">
-                    <a href="#0">
+                    <a href="https://app.rarible.com/token/0x05fda153b204a9211901e3f3da1befcf88c41b57:5:0x50d34fd621ee778ba6431d491c69bab77f3dd3e6" target="_blank">
                       <div>
                         <img src="assets/img/slider/pepe_donald.png" alt="Pepe Donald">
                       </div>
@@ -128,7 +128,7 @@
                     </a>
                   </li>
                   <li class="slider--item">
-                    <a href="#0">
+                    <a href="https://app.rarible.com/token/0x05fda153b204a9211901e3f3da1befcf88c41b57:6:0x50d34fd621ee778ba6431d491c69bab77f3dd3e6" target="_blank">
                       <div>
                         <img src="assets/img/slider/pepe_justin.png" alt="Pepe Justin">
                       </div>
@@ -137,7 +137,7 @@
                     </a>
                   </li>
                   <li class="slider--item">
-                    <a href="#0">
+                    <a href="https://app.rarible.com/token/0x05fda153b204a9211901e3f3da1befcf88c41b57:7:0x50d34fd621ee778ba6431d491c69bab77f3dd3e6" target="_blank">
                       <div>
                         <img src="assets/img/slider/pepe_roger.png" alt="Pepe Roger">
                       </div>
@@ -146,7 +146,7 @@
                     </a>
                   </li>
                   <li class="slider--item">
-                    <a href="#0">
+                    <a href="https://app.rarible.com/token/0x05fda153b204a9211901e3f3da1befcf88c41b57:8:0x50d34fd621ee778ba6431d491c69bab77f3dd3e6" target="_blank">
                       <div>
                         <img src="assets/img/slider/pepe_carlos.png" alt="Pepe Carlos">
                       </div>
@@ -155,7 +155,7 @@
                     </a>
                   </li>
                   <li class="slider--item">
-                    <a href="#0">
+                    <a href="https://app.rarible.com/token/0x05fda153b204a9211901e3f3da1befcf88c41b57:9:0x50d34fd621ee778ba6431d491c69bab77f3dd3e6" target="_blank">
                       <div>
                         <img src="assets/img/slider/pepe_mcafee.png" alt="Pepe Mcafee">
                       </div>
@@ -188,7 +188,7 @@
             <div class="about">
               <div class="about--banner">
                 <h2>YUGI<br>TOKEN</h2>
-                <a href="#0">Etherscan
+                <a href="https://etherscan.io/token/0xbc0b41A42Fb83f7d0019D82aB5C404fBD29e4f42" target="_blank">Etherscan
                   <span>
                     <svg version="1.1" id="Layer_1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px" viewBox="0 0 150 118" style="enable-background:new 0 0 150 118;" xml:space="preserve">
                     <g transform="translate(0.000000,118.000000) scale(0.100000,-0.100000)">
