--- a/index.html
+++ b/index.html
@@ -197,7 +197,7 @@
                     </svg>
                   </span>
                 </a>
-                <img src="assets/img/about-visual.png" alt="About Us">
+                <img src="assets/img/graph.png" alt="About Us">
               </div>
               <div class="about--options">
                 <a href="#0">
