--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
             <li class="is-active"><span>Home</span></li>
             <li><span>Collections</span></li>
             <li><span>YUGI Token</span></li>
-            <li><span>About Us</span></li>
+            <li><span>NFT Drops</span></li>
             <li><span>Social Media</span></li>
           </ul>
         </nav>
@@ -229,55 +229,13 @@
             </div>
           </li>
           <li class="l-section section">
-            <div class="hire">
+            <div class="hire" style="align-items: center;">
               <h2>Social Media</h2>
-              <!-- checkout formspree.io for easy form setup -->
-                <div class="work-request--options">
-                  <span class="options-a">
-                    <input id="opt-1" type="checkbox" value="app design">
-                    <label for="opt-1">
-                      <svg version="1.1" id="Layer_1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px"
-                      viewBox="0 0 150 111" style="enable-background:new 0 0 150 111;" xml:space="preserve">
-                      <g transform="translate(0.000000,111.000000) scale(0.100000,-0.100000)">
-                        <path d="M950,705L555,310L360,505C253,612,160,700,155,700c-6,0-44-34-85-75l-75-75l278-278L550-5l475,475c261,261,475,480,475,485c0,13-132,145-145,145C1349,1100,1167,922,950,705z"/>
-                      </g>
-                      </svg>
-                      Telegram
-                    </label>
-                    <input id="opt-2" type="checkbox" value="graphic design">
-                    <label for="opt-2">
-                      <svg version="1.1" id="Layer_1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px"
-                      viewBox="0 0 150 111" style="enable-background:new 0 0 150 111;" xml:space="preserve">
-                      <g transform="translate(0.000000,111.000000) scale(0.100000,-0.100000)">
-                        <path d="M950,705L555,310L360,505C253,612,160,700,155,700c-6,0-44-34-85-75l-75-75l278-278L550-5l475,475c261,261,475,480,475,485c0,13-132,145-145,145C1349,1100,1167,922,950,705z"/>
-                      </g>
-                      </svg>
-                      Twitter
-                    </label>
-                    <input id="opt-3" type="checkbox" value="motion design">
-                    <label for="opt-3">
-                      <svg version="1.1" id="Layer_1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px"
-                      viewBox="0 0 150 111" style="enable-background:new 0 0 150 111;" xml:space="preserve">
-                      <g transform="translate(0.000000,111.000000) scale(0.100000,-0.100000)">
-                        <path d="M950,705L555,310L360,505C253,612,160,700,155,700c-6,0-44-34-85-75l-75-75l278-278L550-5l475,475c261,261,475,480,475,485c0,13-132,145-145,145C1349,1100,1167,922,950,705z"/>
-                      </g>
-                      </svg>
-                      Medium
-                    </label>
-                  </span>
-                  <span class="options-b">
-                    <input id="opt-4" type="checkbox" value="ux design">
-                    <label for="opt-4">
-                      <svg version="1.1" id="Layer_1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px"
-                      viewBox="0 0 150 111" style="enable-background:new 0 0 150 111;" xml:space="preserve">
-                      <g transform="translate(0.000000,111.000000) scale(0.100000,-0.100000)">
-                        <path d="M950,705L555,310L360,505C253,612,160,700,155,700c-6,0-44-34-85-75l-75-75l278-278L550-5l475,475c261,261,475,480,475,485c0,13-132,145-145,145C1349,1100,1167,922,950,705z"/>
-                      </g>
-                      </svg>
-                      Raribles
-                    </label>
-                  </span>
-                </div>
+              <button onclick=" window.open('https://t.me/pepeyugi','_blank')" style="color: #fff; border: none; width: 150px; background-color: #008CBA; padding: 15px 32px; margin-bottom: 5px;">Telegram</button>
+              <button onclick=" window.open('https://twitter.com/PepeYugi','_blank')" style="color: #fff; border: none; width: 150px; background-color: #008CBA; padding: 15px 32px; margin-bottom: 5px;">Twitter</button>
+              <button onclick=" window.open('https://medium.com/@pepeyugii1','_blank')" style="color: #fff; border: none; width: 150px; background-color: #008CBA; padding: 15px 32px; margin-bottom: 5px;">Medium</button>
+              <button onclick=" window.open('https://app.uniswap.org/#/swap?inputCurrency=0xbc0b41A42Fb83f7d0019D82aB5C404fBD29e4f42','_blank')" style="color: #fff; border: none; width: 150px; background-color: #008CBA; padding: 15px 32px; margin-bottom: 5px;">Uniswap</button>
+              <button onclick=" window.open('https://www.dextools.io/app/uniswap/pair-explorer/0x992c97e177253aedbd54829979c0be9fa57c55f1','_blank')" style="color: #fff; border: none; width: 150px; background-color: #008CBA; padding: 15px 32px; margin-bottom: 5px;">Dextools</button>
             </div>
           </li>
         </ul>
@@ -288,7 +246,7 @@
     <li class="is-active">Home</li>
     <li>Cards</li>
     <li>$YUGI</li>
-    <li>About</li>
+    <li>NFTs</li>
     <li>Social</li>
   </ul>
 </div>
