Change colors of social media buttons

--- a/index.html
+++ b/index.html
@@ -294,10 +294,10 @@
             <div class="hire" style="align-items: center;">
               <h2>Social Media</h2>
               <button onclick=" window.open('https://t.me/pepeyugi','_blank')" style="color: #fff; border: none; width: 150px; background-color: #008CBA; padding: 15px 32px; margin-bottom: 5px;">Telegram</button>
-              <button onclick=" window.open('https://twitter.com/PepeYugi','_blank')" style="color: #fff; border: none; width: 150px; background-color: #008CBA; padding: 15px 32px; margin-bottom: 5px;">Twitter</button>
-              <button onclick=" window.open('https://medium.com/@pepeyugii1','_blank')" style="color: #fff; border: none; width: 150px; background-color: #008CBA; padding: 15px 32px; margin-bottom: 5px;">Medium</button>
-              <button onclick=" window.open('https://app.uniswap.org/#/swap?inputCurrency=0xbc0b41A42Fb83f7d0019D82aB5C404fBD29e4f42','_blank')" style="color: #fff; border: none; width: 150px; background-color: #008CBA; padding: 15px 32px; margin-bottom: 5px;">Uniswap</button>
-              <button onclick=" window.open('https://www.dextools.io/app/uniswap/pair-explorer/0x992c97e177253aedbd54829979c0be9fa57c55f1','_blank')" style="color: #fff; border: none; width: 150px; background-color: #008CBA; padding: 15px 32px; margin-bottom: 5px;">Dextools</button>
+              <button onclick=" window.open('https://twitter.com/PepeYugi','_blank')" style="color: #000; border: none; width: 150px; background-color: #16deec; padding: 15px 32px; margin-bottom: 5px;">Twitter</button>
+              <button onclick=" window.open('https://medium.com/@pepeyugii1','_blank')" style="color: #fff; border: none; width: 150px; background-color: #df0707; padding: 15px 32px; margin-bottom: 5px;">Rarible</button>
+              <button onclick=" window.open('https://app.uniswap.org/#/swap?inputCurrency=0xbc0b41A42Fb83f7d0019D82aB5C404fBD29e4f42','_blank')" style="color: #fff; border: none; width: 150px; background-color: #f02d9e; padding: 15px 32px; margin-bottom: 5px;">Uniswap</button>
+              <button onclick=" window.open('https://www.dextools.io/app/uniswap/pair-explorer/0x992c97e177253aedbd54829979c0be9fa57c55f1','_blank')" style="color: #fff; border: none; width: 150px; background-color: #1486ac; padding: 15px 32px; margin-bottom: 5px;">Dextools</button>
             </div>
           </li>
         </ul>
@@ -318,7 +318,7 @@
 <script src="assets/js/functions-min.js"></script>
 <script>
   // Set the date we're counting down to
-  var countDownDate = new Date("Oct 14, 2020 22:00:00").getUTCTime();
+  var countDownDate = new Date("Oct 14, 2020 22:00:00").getTime();
   
   // Update the count down every 1 second
   var x = setInterval(function() {
