Update pie chart

--- a/index.html
+++ b/index.html
@@ -202,7 +202,7 @@
                     </svg>
                   </span>
                 </a>
-                <img src="assets/img/graph.png" alt="About Us">
+                <img src="assets/img/graph2.png" alt="About Us">
               </div>
               <div class="about--options">
                 <a href="#0">
