--- a/index.html
+++ b/index.html
@@ -318,13 +318,14 @@
 <script src="assets/js/functions-min.js"></script>
 <script>
   // Set the date we're counting down to
-  var countDownDate = new Date("Oct 14, 2020 22:00:00").getTime();
+  //var countDownDate = new Date("Oct 15, 2020 02:00:00").getTime();
+  var countDownDate = new Date(Date.UTC(2020,9,15,2,0,0,0)).getTime();
   
   // Update the count down every 1 second
   var x = setInterval(function() {
   
     // Get today's date and time
-    var now = new Date().getUTCDate();
+    var now = new Date().getTime();
   
     // Find the distance between now and the count down date
     var distance = countDownDate - now;
