Airdrop timer update

--- a/index.html
+++ b/index.html
@@ -319,7 +319,7 @@
 <script>
   // Set the date we're counting down to
   //var countDownDate = new Date("Oct 15, 2020 02:00:00").getTime();
-  var countDownDate = new Date(Date.UTC(2020,9,15,2,0,0,0)).getTime();
+  var countDownDate = new Date(Date.UTC(2020,9,26,2,0,0,0)).getTime();
   
   // Update the count down every 1 second
   var x = setInterval(function() {
@@ -343,7 +343,7 @@
     // If the count down is finished, write some text
     if (distance < 0) {
       clearInterval(x);
-      document.getElementById("countdown").innerHTML = "Founder's Airdrop Completed";
+      document.getElementById("countdown").innerHTML = "Second Airdrop Completed";
     }
   }, 1000);
   </script>
