--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@
                                     </a>
                                     <span class="hidden-xs">&nbsp;</span>
                                     <a href="http://dxsale.app/app/pages/defipresale?saleID=22&chain=BSC" class="btn btn-mod btn-border-w btn-medium btn-round">Presale</a>
-                                    <a href="http://twitter.com/mirrorbsc" class="btn btn-mod btn-border-w btn-medium btn-round">Twitter</a>
+                                    <a href="https://twitter.com/mirrorbsc" class="btn btn-mod btn-border-w btn-medium btn-round">Twitter</a>
                                 </div>
                                 
                             </div>
