--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
                                 </h1>
 
                                 <div class="local-scroll">
-                                    <a href="https://t.me/telegram" class="btn btn-mod btn-border-w btn-medium btn-round lightbox">
+                                    <a href="https://t.me/mirrorbsc" class="btn btn-mod btn-border-w btn-medium btn-round lightbox">
                                         <i class="fa fa-telegram"></i>
                                         Telegram
                                     </a>
