--- a/index.html
+++ b/index.html
@@ -190,7 +190,7 @@
                                     </div>
                                     <h3 class="alt-features-title font-alt">Farming Events</h3>
                                     <div class="alt-features-descr align-left">
-                                        Portion of the event supply will be used to sell and buy until portions of the supply is provided back to the ecosystem.
+                                        Portion of the event supply will be  transferred back and forth to reward all holders + reward farmers + create maximum burn.
                                     </div>
                                 </div>
                             </div>
