--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@
                                         Telegram
                                     </a>
                                     <span class="hidden-xs">&nbsp;</span>
-                                    <a href="http://dxsale.app/app/pages/defipresale?saleID=22&chain=BSC" class="btn btn-mod btn-border-w btn-medium btn-round">Presale</a>
+                                    <a href="https://exchange.pancakeswap.finance/#/swap?inputCurrency=0x85e5682Cc4513358f765cb8Df98f1DD140c6cF86" class="btn btn-mod btn-border-w btn-medium btn-round">Buy MOR</a>
                                     <a href="https://twitter.com/mirrorbsc" class="btn btn-mod btn-border-w btn-medium btn-round">Twitter</a>
                                 </div>
                                 
