--- a/index.html
+++ b/index.html
@@ -142,8 +142,7 @@
                                     </div>
                                     <h3 class="alt-features-title font-alt">Farming Slots</h3>
                                     <div class="alt-features-descr align-left">
-                                        Every Buyer earns weightage rewards instantly from the next 5 transactions in the protocol. Sellers are not rewarded.  
-                                    </div>
+                                         There are 5 farming slots. Only Buy transactions are automatically added to the first farming slot. The buyer will earn extra MOR from every transaction. The buyer will move to the next slot only if there is another buy transaction until the buyer is pushed out of the 5th slot, where he/she will need to re-buy to enter the farming slot to earn more!</div>
                                 </div>
                             </div>
                             <!-- End Tokenomics Item -->
