--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
         <title>Mirror</title>
         <meta name="description" content="">    
         <meta charset="utf-8">
-        <meta name="author" content="https://themeforest.net/user/bestlooker/portfolio">
+        <meta name="author" content="">
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
         
         <!-- Favicons -->
