--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@
                                         Telegram
                                     </a>
                                     <span class="hidden-xs">&nbsp;</span>
-                                    <a href="https://exchange.pancakeswap.finance/#/swap?inputCurrency=0x85e5682Cc4513358f765cb8Df98f1DD140c6cF86" class="btn btn-mod btn-border-w btn-medium btn-round">Buy MOR</a>
+                                    <a href="https://v1exchange.pancakeswap.finance/#/swap?inputCurrency=0x85e5682Cc4513358f765cb8Df98f1DD140c6cF86" class="btn btn-mod btn-border-w btn-medium btn-round">Buy MOR</a>
                                     <a href="https://twitter.com/mirrorbsc" class="btn btn-mod btn-border-w btn-medium btn-round">Twitter</a>
                                     <a href="https://Dashboard.mirror.farm" class="btn btn-mod btn-border-w btn-medium btn-round">Web3 Dashboard Alpha</a>
                                 </div>
